--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "lucide-react": "^0.454.0",
     "marked": "latest",
     "next": "15.2.4",
+    "next-intl": "^4.3.9",
     "next-themes": "latest",
     "react": "^19",
     "react-day-picker": "latest",
@@ -69,6 +70,6 @@
     "@types/react-dom": "^19",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "typescript": "^5.9.2"
   }
 }
