--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "next build",
+    "build": "next build --turbopack",
     "dev": "next dev --turbopack",
     "start": "next start",
     "lint": "biome check",
@@ -19,7 +19,7 @@
     "geist": "latest",
     "lucide-react": "^0.454.0",
     "marked": "latest",
-    "next": "15.2.4",
+    "next": "15.6.0-canary.13",
     "next-intl": "^4.3.9",
     "next-themes": "latest",
     "react": "^19",
@@ -28,15 +28,15 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "tailwindcss-animate": "^1.0.7",
-    "@tailwindcss/typography": "latest",
-    "autoprefixer": "^10.4.20",
     "@biomejs/biome": "^2.2.4",
+    "@tailwindcss/typography": "latest",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.20",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.9.2"
   }
 }
