--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.6.1",
     "@radix-ui/react-dialog": "latest",
     "@radix-ui/react-label": "latest",
     "@radix-ui/react-slot": "latest",
@@ -19,8 +20,8 @@
     "geist": "latest",
     "lucide-react": "^0.454.0",
     "marked": "latest",
+    "negotiator": "^1.0.0",
     "next": "15.6.0-canary.13",
-    "next-intl": "^4.3.9",
     "next-themes": "latest",
     "react": "^19",
     "react-dom": "^19",
@@ -30,6 +31,7 @@
   "devDependencies": {
     "@biomejs/biome": "^2.2.4",
     "@tailwindcss/typography": "latest",
+    "@types/negotiator": "^0.6.4",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
